--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,3 +28,4 @@ jobs:
       with:
         git_remote_url: 'ssh://dokku@platform.natan.la/yaas'
         ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+        git_push_flags: --force
