--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -17,16 +17,17 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       (github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]')
-      && startsWith(github.ref, 'refs/heads/dependabot/pip/youtube-dl')
+      && startsWith(github.head_ref, 'dependabot/pip/youtube-dl')
     steps:
     - name: Auto-merge youtube-dl updates
       uses: actions/github-script@v3
       with:
-        github-token: "${{ secrets.GITHUB_TOKEN }}"
+        # use Personal Access Token with `public_repo`
+        github-token: "${{ secrets.AUTOMERGE_PAT }}"
         script: |
           github.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: '@dependabot merge'
+            body: '@dependabot merge (triggered by automerge)'
           })
