--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,12 +7,10 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -24,9 +22,19 @@ jobs:
         pip install -r requirements.dev.txt
     - name: Lint and test
       run: make test
+
+  deploy:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    concurrency: deploy
+    runs-on: ubuntu-latest
+    needs:
+    - test
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Deploy
       uses: dokku/github-action@v1.0.2
-      if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       with:
         git_remote_url: 'ssh://dokku@platform.natan.la/yaas'
         ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
